--- a/client/src/assets/app/index.html
+++ b/client/src/assets/app/index.html
@@ -56,12 +56,15 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/list.js"></script>
         <script src="scripts/controllers/userdetail.js"></script>
+        <script src="scripts/controllers/addfriend.js"></script>
         <script src="scripts/services/geolocation.js"></script>
         <script src="scripts/services/cordovaReady.js"></script>
         <script src="scripts/services/utils.js"></script>
         <script src="scripts/directives/colorpicker.js"></script>
+        <script src="scripts/directives/utils.js"></script>
         <script src="dist/fries.min.js"></script>
         <!-- endbuild -->
 
