--- a/client/src/assets/app/index.html
+++ b/client/src/assets/app/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <meta name="format-detection" content="telephone=no" />
+
+        <!-- Required meta viewport tag. Do not modify this! -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+
+        <!-- "Add to homescreen" support -->
+        <meta name="mobile-web-app-capable" content="yes">
         <title></title>
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="styles/main.css"/>
         <meta name="format-detection" content="telephone=no" />
-
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+        <link rel="shortcut icon" href="favicon.png"/>
 
         <!-- add styles -->
         <link rel="stylesheet" href="dist/css/holo-dark/base.css" />
@@ -65,15 +66,8 @@
         <script src="scripts/services/utils.js"></script>
         <script src="scripts/directives/colorpicker.js"></script>
         <script src="scripts/directives/utils.js"></script>
-        <script src="dist/fries.min.js"></script>
+        <script src="dist/fries.js"></script>
         <!-- endbuild -->
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
     </body>
 </html>
