--- a/client/src/assets/app/index.html
+++ b/client/src/assets/app/index.html
@@ -55,6 +55,7 @@
 
         <!-- build:js scripts/scripts.js -->
         <script src="dist/fries.js"></script>
+        <script src="dist/swipe.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
@@ -62,11 +63,13 @@
         <script src="scripts/controllers/list.js"></script>
         <script src="scripts/controllers/userdetail.js"></script>
         <script src="scripts/controllers/addfriend.js"></script>
+        <script src="scripts/controllers/newstatus.js"></script>
         <script src="scripts/services/geolocation.js"></script>
         <script src="scripts/services/cordovaReady.js"></script>
         <script src="scripts/services/utils.js"></script>
         <script src="scripts/directives/colorpicker.js"></script>
         <script src="scripts/directives/utils.js"></script>
+        <script src="scripts/directives/slider.js"></script>
         <!-- endbuild -->
 
     </body>
